[package]
name = "bevy_mod_gba"
version = "0.1.0-rc.1"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0-rc.1", default-features = false, features = [
  "libm",
  "bevy_color",
  "bevy_state",
] }
agb = { version = "0.21.1" }
log = { version = "0.4", default-features = false }
derive_more = { version = "2.0.1", default-features = false, features = [
  "from",
] }

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"